hopefully last commit, fixed images on smaller res

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Stephen Hill 200240336 */
 
+
 body {
     background-color: #1c1018;
 }
@@ -46,7 +47,7 @@ main {
 }
 
 #images img:hover {
-    filter:grayscale(80%)
+    filter: blur(1px) grayscale(1);
 }
 
 
@@ -64,3 +65,12 @@ p {
 li:nth-child(odd) {
     font-weight: bold;
 }
+
+
+@media (max-width: 780px) {
+    img {
+      height: 200px;
+      padding: 0;
+      margin: 0;
+    }
+  }
